[package]
name = "rust_bench_playpen"
version = "0.1.0"
edition = "2021"
authors = ["Dwight Browne <dwight@dwightjbrowne.com>"]
description = "Postgres testing with Rust"
license = "MIT"
repository = "https://github.com/dwightbrowne/rust_bench_playpen"
readme = "README.md"
keywords = [ "postgres"]
categories = ["database"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.4", features = ["postgres", "chrono", "uuid"] }
dotenvy = "0.15.7"
chrono = {version = "0.4.19", features = ["serde"] }
uuid = {version = "1.3.3", features = [ "v4"] }


[dev-dependencies]
criterion = {version = "0.3.4", features=["html_reports"]}

[[bench]]
name = "db_benches"
harness = false